tweak hyperref options

--- a/bmc-sectioning.sty
+++ b/bmc-sectioning.sty
@@ -284,24 +284,39 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %		Links
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\RequirePackage[pdfa]{hyperref}
+\RequirePackage[
+	pdfa,
+	unicode=true, % loads with unicode support
+	%a4paper=true, %
+	pdftex=true, %
+	backref, %
+	pagebackref=false, % creates backward references too
+	bookmarks=true, % generate bookmarks in PDF files
+	bookmarksopen=false, % when starting with AcrobatReader, the Bookmarkcolumn is opened
+	pdfpagemode=UseNone,% UseNone, UseOutlines, UseThumbs, FullScreen
+	pdftoolbar=false,
+	pdfmenubar=true,
+	pdffitwindow=false,
+	pdfdisplaydoctitle,
+	pdfborder={1 1 0},
+]{hyperref}
 \RequirePackage{hyperxmp}
 \AtEndPreamble{
 	\hypersetup{
-		pdftoolbar=false,
-		pdfmenubar=true,
-		pdffitwindow=false,
-		pdfborder={1 1 0},
 		pdftitle={\@title},
 		pdfauthor={\@author},
 		pdfsubject={\@subtitle},
 		pdfcreator=pdfLaTeX,
+		pdfproducer={\@author},
 		% pdfkeywords={{a}{b}},
+		linktoc=all,
 		colorlinks=true,
 		linkcolor=href,
-		linktoc=all,
-		urlcolor=href,
+		anchorcolor=href,
 		citecolor=href,
+		menucolor=primary
+		runcolor=href
+		urlcolor=href,
 		filecolor=href,
 		breaklinks=true
 	}
