Update leftover titlesec dependant code

--- a/bmc-sectioning.sty
+++ b/bmc-sectioning.sty
@@ -191,7 +191,7 @@
 }{\endMakeFramed}
 \titlecontents{chapter}[0em]{\vspace*{1\baselineskip}}{
 	\parbox{7.5cm-\leftmargin}{\hfill{\ifbool{bmc@solid}{\hypersetup{linkcolor=contrastColour}}{\hypersetup{linkcolor=primary}}\fontsize{1.5cm}{1ex}\selectfont\color{page}\thecontentspage}\hspace*{3mm}}
-	\vspace*{-1.48cm}\fontfamily{\headingsFont}\selectfont\tocChapterText{\large\chaptertitlename~\thecontentslabel}
+	\vspace*{-1.48cm}\fontfamily{\headingsFont}\selectfont\tocChapterText{\large Chapter~\thecontentslabel}
 	\\[-3mm]
 	\huge\fontfamily{\familydefault}\selectfont
 }{}{\endtocChapterText\vskip-5mm}
