--- a/bmc-sectioning.sty
+++ b/bmc-sectioning.sty
@@ -271,8 +271,8 @@
 		linkcolor=href,
 		anchorcolor=href,
 		citecolor=href,
-		menucolor=primary
-		runcolor=href
+		menucolor=primary,
+		runcolor=href,
 		urlcolor=href,
 		filecolor=href,
 		breaklinks=true
