--- a/documentation/bmc.tex
+++ b/documentation/bmc.tex
@@ -1,7 +1,7 @@
 \documentclass[solid,math,chem,code,plot,gloss]{bmc}
 
 \titlehead{Bespoke Multipurpose Class}
-\title{\texorpdfstring{BMC \hfill \fontsize{1.35cm}{1.35cm}\fontseries{t}\selectfont \emph{v}0.2.1}{BMC v0.2.1}}
+\title{\texorpdfstring{BMC \hfill \fontsize{1.35cm}{1.35cm}\fontseries{t}\selectfont \emph{v}0.2.1*}{BMC v0.2.1*}}
 \subtitle{Pretentiousness Given Form}
 \author{tecosaur \footnotesize \newline Of Github}
 
@@ -11,7 +11,16 @@
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}}
 
+\usepackage[style=apa,backend=biber]{biblatex}
+\bibliography{refs}
+
 \begin{document}
+
+\newglossaryentry{tracking}
+{
+    name=tracking,
+    description={Tracking is the typographer's term for letter-spacing. Tracking adjusts the letter-spacing uniformly over a range of characters.}
+}
 
 \maketitle
 
@@ -184,7 +193,13 @@ With the \mintinline{tex}{gloss} option, this class loads and configures the
 \mintinline{tex}{glossaries} package. Three things are changed
 \newacronym{bmc}{BMC}{Bespoke Multipurpose Class}
 \begin{enumerate}
-    \item Acronyms are typeset in a slightly shrunken font (halfway to smallcaps), e.g. \acrshort{bmc}
+    \item A new command \mintinline{tex}{\acr{TEXT}} is added. This
+    \begin{enumerate}
+        \item Selects the next higher font weight
+        \item Scales the text vertically by a factor of 0.84, and horizontally by 0.91
+        \item Increases \gls{tracking} by 7\acr{M}/100\footnote{See \P~2.1.6 of~\cite{Bringhurst_2004}}
+    \end{enumerate}
+    \item Acronyms are typeset in the style of \mintinline{tex}{\acr}, e.g. \acrshort{bmc}
     \item The glossary style in configured to a variant of \mintinline{tex}{long3col}
     \item A new command \mintinline{tex}{\newdefinedacronym{label}{short}{long}{description}} is added
 \end{enumerate}
@@ -834,9 +849,45 @@ colours as you like.
 \chapter{Reasoning}
 
 \section{Layout}
+
+
+
 \section{Typefaces}
 \label{sec:why-typefaces}
+
+Unfortunately large type studies on UI/UX and typography
+seem to be exclusive to large companies that care about this
+(e.g.\ microsoft, google, etc.) and don't seem to publish their results.
+
+It has long been known that there is a relationship between the reader's judged aesthetic pleasingness of text, and the legibility
+(\cite{Tinker_Paterson_1942}).
+Regardless of the underlying mechanisms, this provides strong justification for putting in the effort to make a document
+have good content, \emph{and} good aesthetics.
+
+A study by \cite{kaspar2015matter} presented subjects with research papers in serif and sans-serif fonts.
+They found that sans-serif fonts increase reading speed. While this was not a focus of the study, it is apparently
+in line with previous research.
+A 2005 study by~\cite{Gasser_Boeke_Haffernan_Tan_2005} found that
+sans-serif founts produced 9\% improvement in recall (\(N=149\), \(p=0.05\)).
+
+While~\cite{kaspar2015matter} found that while sans-serif fonts are read faster,
+in every category tested, sans-serif fonts performed better. Specially serifs were found to improve:
+\begin{itemize}
+    \item Comprehension
+    \item Interest in paper and appeal of abstract
+    \item Perceived quality and importance
+\end{itemize}
+
+More generally,~\cite{larson2007measuring} identified two measures that successfully indicate aesthetic difference. Performance of creative cognitive tasks after reading a document, and subconscious activation of the facial muscle responsible for frowning.
+For both measures a method that had \(p=0.04\) was yielded.
+It is rather interesting that they found that improved typography reduced frowning and and improved creative cognitive task performance.
+
+Semantic associations between the typeface chosen and the content also seem to be important. \cite{web_chooserightfont} appears to give a good overview of this.
+
 \section{Colour}
+
+\printbibliography
+\printglossary
 
 \end{document}
 
