--- a/bmc-maths.sty
+++ b/bmc-maths.sty
@@ -36,7 +36,23 @@
 \newcommand{\HH}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{H}}{\mathbb{H}^{#1}}}}
 
 % commonly used macros
-\newcommand{\dd}[1][]{\ensuremath{\ifstrempty{#1}{\mathrm{d}}{\mathrm{d}^{#1}}}}
+%  - differentials
+\newsavebox\diffdbox
+\newcommand{\slantedromand}{{\mathpalette\makesl{d}}}
+\newcommand{\makesl}[2]{%
+  \begingroup
+  \sbox{\diffdbox}{$\mathsurround=0pt#1\mathrm{#2}$}%
+  \pdfsave
+  \pdfsetmatrix{1 0 0.2 1}%
+  \rlap{\usebox{\diffdbox}}%
+  \pdfrestore
+  \hskip\wd\diffdbox
+  \endgroup
+}
+\newcommand{\dd}[1][]{\ensuremath{\mathop{}\!\ifstrempty{#1}{\slantedromand\@ifnextchar^{\hspace{0.2ex}}{\hspace{0.1ex}}}{\slantedromand\hspace{0.2ex}^{#1}}}}
+\providecommand*{\dv}[3][]{\ifstrempty{#1}{\frac{\dd #2}{\dd #3}}{\frac{\dd^{#1} #2}{\dd #3^{#1}}}}
+\providecommand*{\pdv}[3][]{\frac{\partial^{#1}#2}{\partial#3^{#1}}}
+%  - others
 \DeclareMathOperator{\Lap}{\mathcal{L}}
 \DeclareMathOperator{\Var}{Var} % varience
 \DeclareMathOperator{\Cov}{Cov} % covarience
