rename tipsColor → tipColor

--- a/bmc-boxes.sty
+++ b/bmc-boxes.sty
@@ -123,7 +123,7 @@
 \newBmcBox{info}{informationColor}{Information}[info][\faInfo]
 \newBmcBox{check}{checkColor}{Check}[check][\faCheck]
 \newBmcBox{warning}{warningColor}{Warning}[warn][\faExclamation]
-\newBmcBox{tip}{tipsColor}{Tip}[tip][\faLightbulb]
+\newBmcBox{tip}{tipColor}{Tip}[tip][\faLightbulb]
 
 \newcommand{\bmcBoxMathIcon}{\fontsize{.6cm}{.72cm}\selectfont$\pi$}
 \newBmcBox{proof}{mathematicalColor}{Proof}[prf][\bmcBoxMathIcon]
