--- a/bmc-color.sty
+++ b/bmc-color.sty
@@ -84,7 +84,7 @@
     \colorlet{informationColor}{Green}
     \colorlet{checkColor}{Blue}
     \colorlet{warningColor}{Orange}
-    \colorlet{tipsColor}{Purple}
+    \colorlet{tipColor}{Purple}
     \colorlet{exampleColor}{Blue}
     \colorlet{mathematicalColor}{Orange}
     \colorlet{codeColor}{Grey}
